# sports-classifier

./: pyproject.toml
app/: server.py
app/static/: client.js
app/view/: index.html
